--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '4'
 services:
   app:
     build:
@@ -9,3 +9,27 @@ services:
       - .src:/app/src
     environment:
       - JAVA_OPTS=-Xmx512m
+    networks:
+      custom_net:
+        ipv4_address: 10.5.0.5
+
+  nginx:
+    image: nginx:1-alpine
+    ports:
+      - "5000:80"
+    volumes:
+#      - ./src/main/resources/static/index.html:/data/www/index.html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+    networks:
+      custom_net:
+        ipv4_address: 10.5.0.2
+
+networks:
+  custom_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 10.5.0.0/16
+          gateway: 10.5.0.1
