added postgresDB and PostMapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=SWKOM_Paperless_GroupF
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration, org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/paperless
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# Hibernate Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
