--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
 version: '4'
 services:
+  db:
+    image: postgres:latest
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: paperless
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - pdf_storage:/data/pdf
+    networks:
+      custom_net:
+        ipv4_address: 10.5.0.50
+
   app:
     build:
       context: .
@@ -18,7 +33,6 @@ services:
     ports:
       - "5000:80"
     volumes:
-#      - ./src/main/resources/static/index.html:/data/www/index.html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
@@ -33,3 +47,7 @@ networks:
       config:
         - subnet: 10.5.0.0/16
           gateway: 10.5.0.1
+
+volumes:
+  postgres_data:
+  pdf_storage:
