--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <version>8.0.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
 
     </dependencies>
 
