--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=SWKOM_Paperless_GroupF
 
+# Postgresql Settings
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/paperless}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
+
+# File Upload Settings
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 # Hibernate Properties
 spring.jpa.generate-ddl=true
@@ -11,4 +17,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework.rabbitmq=DEBUG
+logging.level.com.rabbitmq=DEBUG
+
+# RabbitMQ
+spring.rabbitmq.host=10.5.0.3
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:paperless}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:paperless}
 
