--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     ports:
       - "8081:8080"
     volumes:
-      - .src:/app/src
+      - ./RestUI/src:/app/src
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -65,7 +65,7 @@ services:
     ports:
       - "5000:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./RestUI/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       app:
         condition: service_started
