added minio connection and upload

--- a/RestUI/pom.xml
+++ b/RestUI/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.17</version>
+        </dependency>
+
 
     </dependencies>
 
