--- a/RestUI/src/main/resources/application.properties
+++ b/RestUI/src/main/resources/application.properties
@@ -30,3 +30,9 @@ spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:paperless}
 # OpenAPI
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger
+
+# Minio config
+minio.url=http://minio:9000
+minio.access-key=paperless
+minio.secret-key=paperless1234
+minio.bucket=documents
