--- a/RestUI/src/main/resources/application.properties
+++ b/RestUI/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.amqp=DEBUG
 logging.level.org.springframework.rabbitmq=DEBUG
