why is it this way? please work git!

--- a/OCRWorker/src/main/resources/application.properties
+++ b/OCRWorker/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=OCRWorker
+
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework.rabbitmq=DEBUG
+logging.level.com.rabbitmq=DEBUG
+
+# RabbitMQ
+spring.rabbitmq.host=10.5.0.3
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:paperless}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:paperless}
+
+# Minio config
+minio.url=http://minio:9000
+minio.access-key=paperless
+minio.secret-key=paperless1234
+minio.bucket=documents
