--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,10 +84,32 @@ services:
       MINIO_ACCESS_KEY: paperless
       MINIO_SECRET_KEY: paperless1234
     volumes:
-      - ./minio_data:/data
+      - minio_data:/data
+    depends_on:
+      - app
     networks:
       custom_net:
         ipv4_address: 10.5.0.4
+
+  ocrworker:
+    build:
+      context: ./OCRWorker
+      dockerfile: Dockerfile
+    container_name: ocrWorker
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_RABBITMQ_PORT: 5672
+      SPRING_RABBITMQ_USERNAME: paperless
+      SPRING_RABBITMQ_PASSWORD: paperless
+    ports:
+      - "8082:8082"
+    depends_on:
+      - rabbitmq
+      - minio
+      - app
+    networks:
+      custom_net:
+        ipv4_address: 10.5.0.6
 
 networks:
   custom_net:
@@ -99,3 +121,4 @@ networks:
 
 volumes:
   postgres_data:
+  minio_data:
