added elasticsearch + fulltextsearch

--- a/OCRWorker/src/main/resources/application.properties
+++ b/OCRWorker/src/main/resources/application.properties
@@ -17,3 +17,6 @@ minio.url=http://minio:9000
 minio.access-key=paperless
 minio.secret-key=paperless1234
 minio.bucket=documents
+
+# Elasticsearch Config
+spring.elasticsearch.uris=http://elasticsearch:9200
