--- a/RestUI/pom.xml
+++ b/RestUI/pom.xml
@@ -81,6 +81,18 @@
             <version>8.5.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20241224</version>
+        </dependency>
+
+        <dependency>
+            <groupId>co.elastic.clients</groupId>
+            <artifactId>elasticsearch-java</artifactId>
+            <version>8.10.0</version>
+        </dependency>
+
 
     </dependencies>
 
